--- a/ouest_france.fr/client/DatavizBubble/style.css
+++ b/ouest_france.fr/client/DatavizBubble/style.css
@@ -1,47 +1,32 @@
 .dataVizbarText{
   color:#FFFFFF;
+  font-family: Oswald-Light;
+  font-size: 1.1vw;
 }
 
-.dataVizbarTextSpe{
+.dataVizbarTextSpeB{
   color:#FFFFFF;
   margin-left:20px;
+  margin-bottom:17px;
+  font-family: Oswald-Light;
+  font-size: 1.1vw;
 }
 
 #dataVizbarEtabB1{
-  margin-top:20px;
   margin-left:20px;
   width:0px;
   height:20px;
   background-color:#ed5c49;
 }
 #dataVizbarEtabB2{
-  margin-top:20px;
   margin-left:20px;
   width:0px;
   height:20px;
   background-color:#f9a21c;
 }
 #dataVizbarEtabB3{
-  margin-top:20px;
-    margin-left:20px;
+  margin-left:20px;
   width:0px;
   height:20px;
   background-color:#127eb6;
-}
-
-#dataVizbarTextB1{
-  margin-top:20px;
-  width:150px;
-  height:50px;
-}
-
-#dataVizbarTextB2{
-  margin-top:20px;
-  width:150px;
-  height:50px;
-}
-#dataVizbarTextB3{
-  margin-top:20px;
-  width:150px;
-  height:50px;
 }
