debut bout d2 plus bug contener

--- a/le_journal_des_entreprises/html/css/salariesNum.css
+++ b/le_journal_des_entreprises/html/css/salariesNum.css
@@ -88,7 +88,10 @@ background-color:#CBDADD;
  width: 10%;
  margin-left: 5px;
 }
-
+#xlabelS p:hover
+{
+ cursor: pointer;
+}
 .punch
 {
  display: inline-block;
