--- a/le_journal_des_entreprises/html/css/styledataviz2.css
+++ b/le_journal_des_entreprises/html/css/styledataviz2.css
@@ -72,21 +72,25 @@ html
 #dataviz1Identite
 {
 	background-color : #33425F;
- 	width:100%;
  	height:100%;
  	margin-right:0px;
- 	margin-left:0px; 
  	font-family:Helvetica, sans-serif;
     font-size:7pt;
     color:#9FC0C7;
     text-align:center;
+    padding-bottom: 10px;
+    margin-left: 44%;
+    width: 600px !important;
 }
 
 #modalDataviz2 {
     border-radius: 0px;
-    background: #33425F;
+    background: transparent;
 }
 
+.modal-body {
+    background-color : transparent !important;
+}
 
 #subcol1
 {
