overflow et vérif

--- a/le_journal_des_entreprises/html/css/dataviz1.css
+++ b/le_journal_des_entreprises/html/css/dataviz1.css
@@ -2,22 +2,16 @@
 font-family: 'Myriad Pro Condensed';
 font-style: normal;
 font-weight: normal;
-src: local('Myriad Pro Condensed'), url('../fonts/MYRIADPRO-COND.woff') format('woff');
+src: local('Myriad Pro Condensed'), url('fonts/MYRIADPRO-COND.woff') format('woff');
 }
 
 @font-face {
 font-family: 'Myriad Pro Condensed Italic';
 font-style: normal;
 font-weight: normal;
-src: local('Myriad Pro Condensed Italic'), url('../fonts/MYRIADPRO-CONDIT.woff') format('woff');
+src: local('Myriad Pro Condensed Italic'), url('fonts/MYRIADPRO-CONDIT.woff') format('woff');
 }
 
-@font-face {
-font-family: 'Myriad Pro Condensed';
-font-style: normal;
-font-weight: normal;
-src: local('Bebas Neue'), url('../fonts/BebasNeue.otf') format('otf');
-}
 
 /***************
  * Dataviz1 Panel *
