--- a/le_journal_des_entreprises/html/css/stylematchfinal.css
+++ b/le_journal_des_entreprises/html/css/stylematchfinal.css
@@ -30,7 +30,20 @@
     text-align: center;
 }
     
-    
+#slidematchfinal h1 {
+    font: bebasregular;
+    text-transform: uppercase;
+    font-size: 16px;
+    position: absolute;
+    color: white;
+    width: 122px;
+    margin-left: 4px;
+    top: 18px;
+}
+#slidematchfinal h1 span{
+ font-size: 12px;
+}
+
 .boutonPodium:hover {
     cursor: pointer;
 }
