--- a/le_journal_des_entreprises/html/css/interactiveTab.css
+++ b/le_journal_des_entreprises/html/css/interactiveTab.css
@@ -37,10 +37,10 @@ body, html, #comparison {
 }
 
 .tab0 .row div, .tab1 .row div {
-    width : 30%;
+    width : 47%;
     padding : 4px;
     margin : 1.2%;
-    height: 149px;
+    height: 130px;
     border-radius: 0px;
     background-color: rgb(80, 80, 81);
     border: medium none;
@@ -134,4 +134,10 @@ h5 {
     margin-top: -14px;
     text-align: center;
     color : white;
+}
+
+
+.modal-dialog {
+    width: 940px !important;
+    margin-left: -470px !important;
 }
