--- a/le_journal_des_entreprises/html/css/salariesNum.css
+++ b/le_journal_des_entreprises/html/css/salariesNum.css
@@ -1,13 +1,14 @@
  #salariesNum
 { 
  background-color: #213146;  
- text-align:center;
+
  color: white;   
 }
 
 .insideS1
 {
  height: 90%;
+ text-align:center;
 }
 
 #affichS
@@ -18,12 +19,12 @@
 
 #cadreS
 {
- width: 80%;
  height: 85%;
  margin-left: 10%;
  border-style: solid;
  border-width: 2px;
  border-color: #E9AE28;
+ margin: 0 auto;
 }
 
 #ylabelS
@@ -53,11 +54,6 @@ margin-top: 30%;
  border-color: #E9AE28;
 }
 
-#cadreS
-{
- padding-left: 13px;
-}
-
 #cadreCo1
 {
 background-color:#09404F;
@@ -82,7 +78,6 @@ background-color:#CBDADD;
 }
 
 #xlabelS{
- padding-left: 4%;
  margin-top: 5px;
 }
 #xlabelS p
@@ -90,15 +85,103 @@ background-color:#CBDADD;
  display: inline-block;
  color: #E9AE28;
  font-size: 11pt;
- margin-right: 45px;
+ width: 10%;
+ margin-left: 5px;
 }
-
+#xlabelS p:hover
+{
+ cursor: pointer;
+}
 .punch
 {
  display: inline-block;
  height: 99%;
  width: 10%;
  background-image: url('../images/Sac-de-frappe-1.png');
+ background-size: 95% 80%;
  background-repeat: no-repeat;
+ background-position:0 -10px;
  margin-left: 5px;
+ position:relative;
+ text-align: left;
+ 
+ -o-transition: background-position 0.2s;
+ -ms-transition: background-position 0.2s;
+ -moz-transition: background-position 0.2s;
+ -webkit-transition: background-position 0.2s;
+ /* ...and now for the proper property */
+ transition: background-position 0.2s;
+}
+.punch:hover
+{
+ cursor: pointer;
+ background-position:0 0;
+}
+
+
+.punch p
+{
+ position: absolute;
+ top: 45%;
+ text-align: center;
+ width: 100%;
+ font-size: 20pt;
+}
+
+@media screen and (max-height: 680px) {
+   .punch {
+    background-size: 95% 95%;
+   }
+   .punch p
+   {
+    top: 50%;
+   }
+}
+
+
+.punch p span
+{
+  font-size: 18pt;
+  display: inline-block;
+}
+
+.cliquezIciD2 {
+ margin-top : 45px;
+ color: #F9F9FA;
+ font-family: 'Myriad Pro Condensed', sans-serif;
+ font-size: 15pt;
+}
+
+.titleD1 {
+ text-align : left;
+ float: left;
+ display: inline-block;
+}
+
+@media screen and (max-width: 1230px) {
+   .headD1 {
+     margin-top: 0px;
+   }
+}
+
+@media screen and (max-width: 1205px) {
+   .punch p span {
+     display: block;
+     text-align: center
+   }
+}
+
+#affichS
+{
+ margin-top:40px;
+}
+
+@media screen and (max-height: 700px) {
+   #affichS {
+    margin-top: 20px;
+   }
+   .cliquezIciD1 p
+   {
+    font-size: 12pt;
+   }
 }
