--- a/le_journal_des_entreprises/html/css/styleintro.css
+++ b/le_journal_des_entreprises/html/css/styleintro.css
@@ -23,6 +23,10 @@ html, body
  font-family: 'Helvetica', sans-serif;
 }
 
+.contenaireMaison {
+    min-width: 920px;
+}
+
 h1
 {
  font-size: 23px
@@ -30,8 +34,7 @@ h1
 
 
 body{
- /*overflow:hidden;*/
-
+    overflow: hidden;
     position: absolute;
     top: 0;
     right: 0;
@@ -47,7 +50,7 @@ body{
 
 #logo
 {
- margin-top: 21px;
+ padding-top: 21px;
 }
  
 .page
@@ -63,7 +66,6 @@ body{
 #slide1
 { 
  background-color: #213146;  
- text-align:center;
 }
  
 #slide2
@@ -77,12 +79,14 @@ body{
  background-image: url("../images/ring.png");   
  background-repeat: no-repeat;
  background-attachment: fixed;
- background-position: center;  
+ background-position: center; 
+ text-align:center;
 }
 
 #inside2 h1
 {
- margin-top: 370px;
+ padding-top: 370px;
+ margin-top:0px;
 }
 
 #texteIntro 
@@ -92,8 +96,13 @@ body{
  max-width : 650px;
  color: white;
  margin-top: 235px;
- padding-left: 30px;
  text-align: justify;
+}
+@media screen and (max-height: 645px) {
+   #texteIntro  {
+        font-size: 12px;
+        margin-top: 222px;
+    }
 }
 
 #inside2 p
@@ -116,6 +125,7 @@ body{
  background-attachment: fixed;
  background-position: center; 
  color: #213146;
+ text-align:center;
 }
 
 #question
@@ -129,5 +139,6 @@ body{
 {
  bottom: 20px;
  position:absolute;
+ text-align:center;
 }
 
