--- a/le_journal_des_entreprises/html/css/salariesNum.css
+++ b/le_journal_des_entreprises/html/css/salariesNum.css
@@ -20,11 +20,11 @@
 #cadreS
 {
  height: 85%;
- margin-left: 10%;
  border-style: solid;
  border-width: 2px;
  border-color: #E9AE28;
  margin: 0 auto;
+ overflow:hidden;
 }
 
 #ylabelS
@@ -81,16 +81,16 @@ background-color:#CBDADD;
 
 .punch
 {
- display: inline-block;
+ display:inline-block;
  height: 99%;
  width: 10%;
  background-image: url('../images/Sac-de-frappe-1.png');
  background-size: 95% 80%;
  background-repeat: no-repeat;
  background-position:0 -10px;
+ text-align: left;
  margin-left: 5px;
  position:relative;
- text-align: left;
  
  -o-transition: background-position 0.2s;
  -ms-transition: background-position 0.2s;
@@ -99,6 +99,7 @@ background-color:#CBDADD;
  /* ...and now for the proper property */
  transition: background-position 0.2s;
 }
+
 .punch:hover
 {
  cursor: pointer;
@@ -130,13 +131,20 @@ background-color:#CBDADD;
   font-size: 18pt;
   display: inline-block;
 }
+
+#cadreVilles
+{
+ height: 85%;
+ margin: 3px auto;
+}
+
 .villeS
 {
- position:absolute;
- top: 101%;
+ display:inline-block;
+ width: 10%;
+ margin-left: 5px;
  color: #E9AE28;
  font-size: 11pt;
- width: 100%;
  text-align: center;
 }
 
