Last minute fixes on a few projects
Typos, and small bugs

--- a/citizen_press/html/css/credit.css
+++ b/citizen_press/html/css/credit.css
@@ -72,9 +72,9 @@
     margin: auto;
     background-size: 100% 100%;
 }
-.creditPhoto:hover {
+/*.creditPhoto:hover {
     cursor: pointer;
-}
+}*/
 #charlesCentofantiPhotoCredit {
     background-image: url('../media/credit/charles.jpg');
 }
