--- a/le_journal_des_entreprises/html/css/interactiveTab.css
+++ b/le_journal_des_entreprises/html/css/interactiveTab.css
@@ -142,3 +142,19 @@ h5 {
     margin-left: -470px !important;
 }
 
+#refreshButton span {
+    border-radius: 50%;
+    background-color: #BDDAD8;
+    width: 50px;
+    height: 50px;
+    line-height: 50px;
+}
+
+#refreshButton span:hover {
+    cursor: pointer;
+}
+
+#subtitleComparison {
+    font-size: 14pt;
+    color: white;
+}
