--- a/le_journal_des_entreprises/html/css/styleintro.css
+++ b/le_journal_des_entreprises/html/css/styleintro.css
@@ -1,144 +1,106 @@
 /***************
  * Intro Panel *
  ***************/
+
 @font-face {
     font-family: 'bebasregular';
     src: url('../fonts/BEBAS___-webfont.eot');
-    src: url('../fonts/BEBAS___-webfont.eot?#iefix') format('embedded-opentype'),
-    url('../fonts/BEBAS___-webfont.woff') format('woff'),
-    url('../fonts/BEBAS___-webfont.ttf') format('truetype'),
-    url('../fonts/BEBAS___-webfont.svg#bebasregular') format('svg');
+    src: url('../fonts/BEBAS___-webfont.eot?#iefix') format('embedded-opentype'), url('../fonts/BEBAS___-webfont.woff') format('woff'), url('../fonts/BEBAS___-webfont.ttf') format('truetype'), url('../fonts/BEBAS___-webfont.svg#bebasregular') format('svg');
     font-weight: normal;
     font-style: normal;
 }
-
-html, body
-{
- height: 100%;
- min-height: 100%;
- margin: 0;
- width: 100%; 
- 
- font-size:11px;
- font-family: 'Helvetica', sans-serif;
+html,
+body {
+    height: 100%;
+    min-height: 100%;
+    margin: 0;
+    width: 100%;
+    font-size: 11px;
+    font-family: 'Helvetica', sans-serif;
 }
-
 .contenaireMaison {
     min-width: 920px;
 }
-
-h1
-{
- font-size: 23px
+h1 {
+    font-size: 23px
 }
-
-
-body{
+body {
     overflow: hidden;
     position: absolute;
     top: 0;
     right: 0;
     bottom: 0;
     left: 0;
-
 }
-
-.inline-block
-{
- display:inline-block;
+.inline-block {
+    display: inline-block;
 }
-
-#logo
-{
- padding-top: 21px;
+#logo {
+    padding-top: 21px;
 }
- 
-.page
-{
- width: 100%;
- height: 100%;
- min-height:100%;
- display: block; 
- position: relative;
+.page {
+    width: 100%;
+    height: 100%;
+    min-height: 100%;
+    display: block;
+    position: relative;
 }
-
-
-#slide1
-{ 
- background-color: #213146;  
+#slide1 {
+    background-color: #213146;
 }
- 
-#slide2
-{
- text-align:center;
+#slide2 {
+    text-align: center;
 }
-
-#inside1
-{
- height: inherit;
- background-image: url("../images/ring.png");   
- background-repeat: no-repeat;
- background-attachment: fixed;
- background-position: center; 
- text-align:center;
+#inside1 {
+    height: inherit;
+    background-image: url("../images/ring.png");
+    background-repeat: no-repeat;
+    background-attachment: fixed;
+    background-position: center;
+    text-align: center;
 }
-
-#inside2 h1
-{
- padding-top: 370px;
- margin-top:0px;
+#inside2 h1 {
+    padding-top: 370px;
+    margin-top: 0px;
 }
-
-#texteIntro 
-{
- font-size:15px;
- 
- max-width : 650px;
- color: white;
- margin-top: 235px;
- text-align: justify;
+#texteIntro {
+    font-size: 15px;
+    max-width: 650px;
+    color: white;
+    margin-top: 235px;
+    text-align: justify;
 }
 @media screen and (max-height: 645px) {
-   #texteIntro  {
+    #texteIntro {
         font-size: 12px;
         margin-top: 222px;
     }
 }
-
-#inside2 p
-{
- text-align:left;
- max-width : 650px;
- padding-left: 30px;
+#inside2 p {
+    text-align: left;
+    max-width: 650px;
+    padding-left: 30px;
+}
+#nav1 img {
+    width: 25px;
+}
+#inside2 {
+    height: inherit;
+    background-image: url("../images/Gants.png");
+    background-repeat: no-repeat;
+    background-attachment: fixed;
+    background-position: center;
+    color: #213146;
+    text-align: center;
+}
+#question {
+    text-transform: uppercase;
+    font-family: 'bebasregular', Arial, Helvetica, sans-serif;
+    font-size: 25px;
 }
 
-#nav1 img
-{
- width:25px;
+.baspage {
+    bottom: 20px;
+    position: absolute;
+    text-align: center;
 }
-
-#inside2
-{
- height: inherit;
- background-image: url("../images/Gants.png");  
- background-repeat: no-repeat;
- background-attachment: fixed;
- background-position: center; 
- color: #213146;
- text-align:center;
-}
-
-#question
-{
- text-transform: uppercase;
- font-family:'bebasregular', Arial, Helvetica, sans-serif;
- font-size:25px;
-}
-
-.baspage
-{
- bottom: 20px;
- position:absolute;
- text-align:center;
-}
-
