--- a/le_journal_des_entreprises/html/css/dataviz1.css
+++ b/le_journal_des_entreprises/html/css/dataviz1.css
@@ -153,6 +153,10 @@ float:right;
  font-size: 18pt;
 }
 
+.modal-content {
+    background-color: transparent !important;
+}
+
 #graph {
  margin-top: 40px;
 }
