fix dataviz 1 fonts

--- a/le_journal_des_entreprises/html/css/dataviz1.css
+++ b/le_journal_des_entreprises/html/css/dataviz1.css
@@ -153,7 +153,7 @@ float:right;
  font-size: 18pt;
 }
 
-.modal-content {
+#dataviz1.modal-content {
     background-color: transparent !important;
 }
 
