--- a/le_journal_des_entreprises/html/css/styleoutro.css
+++ b/le_journal_des_entreprises/html/css/styleoutro.css
@@ -122,3 +122,17 @@
 {
     margin-top : 6%;
 }
+
+iframe#twitter-widget-0[style] {
+    width: 120px !important;
+}
+
+div.fb-share-button {
+    position: relative;
+    top: -7px;
+}
+
+span.IN-widget {
+    position: relative;
+    top: -3px;
+}
