reconnaissance tout ca

--- a/le_journal_des_entreprises/html/css/styleoutro.css
+++ b/le_journal_des_entreprises/html/css/styleoutro.css
@@ -22,7 +22,7 @@
     font-family: bebasregular;
 }
 
-.nameSC {
+.nameSC, .nameSC a {
     text-transform: uppercase;
     color: #886924;
     font-family: bebasregular;
